# esp8266-cmake-template

./: .gitignore  CMakeLists.txt  README.md  clean.sh  flash.sh
cmake/: library.cmake
hardware/tools/: elf2bin.py
hardware/tools/sdk/ld/: eagle.app.v6.common.ld.h
libraries/FastLED/: FastLED.h  colorutils.cpp  fastspi.h
libraries/Time/: DateStrings.cpp
src/: Constants.h  EepromManager.h  FFT_C.cpp  FFT_C.h  FastFilter.h  OtaManager.h  analog.cpp  analog.h  constants.cpp  constants.h  effects.cpp  effects.h  effects.ino  leds_driver.cpp  leds_driver.h  main.cpp  palettes.cpp  palettes.h  parsing.ino  process_manager.cpp  process_manager.h  runningText.ino  time.ino  timers.cpp  timers.h  types.h  utility.cpp  utility.h  utility.ino  volanalyzer.cpp  volanalyzer.h
